# devkit

./: .gitignore  BLUEPRINT_MIGRATION_ENGINE.md  Button.rs  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  CompoundInterestCalculator.rs  EXAMPLES.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  LOGGING.md  Makefile  PLUGIN_SYSTEM.md  PLUGIN_WORKFLOWS.md  README.md  README_ENHANCED.md  README_OLD.md  SCROLLING.md  SESSION_SUMMARY.md  TESTING_SUMMARY.md  WARP.md  calculate_factorial.py  config.example.toml  deny.toml  generated_code.go  generated_code.java  install-shell-integration.sh  install.sh  logging-config.toml  self_replicate.rs  test_agents.rs  test_integration.rs  test_integration_fixed.rs  test_persistent_input.sh  test_persistent_mode.txt  test_scrolling.md  test_session.json  test_shell.rs  test_system_bus.rs
.github/workflows/: ci-scaffold.yml  ci.yml  release.yml  security.yml
benches/: main.rs
demo_project/: Cargo.toml
demo_project/src/: handlers.rs  lib.rs  main.rs  models.rs  utils.rs
demo_project/tests/: integration_tests.rs
docs/: API.md  BLUEPRINT_DIFF_ANALYSIS.md  BLUEPRINT_TESTING_SUMMARY.md  CLI.md  EXAMPLES.md  PROMPT_CHEATSHEET.md  manual_test_guide.md  ollama-integration.md  ui_enhancements_summary.md
examples/: agent_code_generation.rs  artifact_display_demo.rs  basic_usage.rs  context_analysis.rs  diff_apply_workflow.rs  enhanced_agent_ui_demo.rs  enhanced_ui_demo.rs  evaluation_example.rs  full_integration.rs  ollama_integration.rs  rules_integration.rs  sample_blueprint.json  simple_enhanced_agent_demo.rs  test_diff.rs  test_migration.rs  test_multilang.rs  test_simple_diff.rs
mock_marketplace/: installations.json  plugins_database.json
plugins/test-plugin/: plugin.py  plugin.toml
scripts/: dev-setup.sh  dev.sh  generate_cli_docs.sh  test_workflow.rs  verify_core_functionality.sh
scripts/test/: test_commands.txt  test_input_demo.sh  test_interactive_commands.md  test_phase1_basic.sh  test_simple_ui.sh
src/: error.rs  integration_test.rs  integrations.rs  interactive.rs  lib.rs  main.rs  sort_utils.js  system_bus.rs
src/agents/: agent_types.rs  behavior.rs  enhanced_agent.rs  mod.rs  orchestrator.rs  orchestrator_tests.rs  progress.rs  review.rs  state_machine.rs  system.rs  task.rs
src/ai/: client.rs  manager.rs  mod.rs  routing.rs  tests.rs
src/analytics/: mod.rs
src/artifacts/: display.rs  manager.rs  mod.rs
src/blueprint/: extractor.rs  generator.rs  mod.rs  replicator.rs  templates.rs
src/blueprint/evolution/: diff.rs  generators.rs  migration.rs  mod.rs
src/blueprint/languages/: mod.rs
src/blueprint/languages/analyzers/: javascript.rs  mod.rs  python.rs  rust.rs
src/blueprint/tests/: diff_tests.rs  evolution_tests.rs.bak  fixtures.rs  mod.rs  test_utils.rs  version_tests.rs
src/cli/: completion.rs  formatting.rs  help.rs  interactive.rs  mod.rs  progress.rs  session_manager.rs  validation.rs
src/cli/commands/: agent.rs  analyze.rs  blueprint.rs  chat.rs  config.rs  demo.rs  evolution.rs  generate.rs  init.rs  inspect.rs  interactive.rs  mod.rs  plugin.rs  profile.rs  review.rs  shell.rs  status.rs  template.rs
src/codegen/: analyzer.rs  diff_apply.rs  generator.rs  language_detection.rs  mod.rs  stubs.rs  templates.rs
src/config/: defaults.rs  loader.rs  mod.rs  rules.rs  settings.rs  validation.rs
src/context/: analyzer.rs  embeddings.rs  indexer.rs  mod.rs  repository.rs  semantic.rs  symbols.rs
src/evaluation/: benchmarks.rs  framework.rs  metrics.rs  mod.rs  quality_gates.rs  regression.rs  reports.rs
src/integration/: mod.rs
src/interactive/: history.rs
src/logging/: config.rs  context.rs  formatter.rs  metrics.rs  mod.rs  output.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs
src/plugins/: config.rs  hotreload.rs  loader.rs  manager.rs  manifest.rs  marketplace.rs  mod.rs  registry.rs  sandbox.rs  types.rs  types_old.rs  wasm.rs
src/sandbox/: cleanup.rs  container.rs  isolation.rs  limits.rs  mod.rs
src/secrets/: audit.rs  mod.rs  policies.rs  providers.rs  scanner.rs  vault.rs
src/services/: mod.rs
src/session/: mod.rs  persistence.rs
src/shell/: bash.rs  detector.rs  executor.rs  fish.rs  mod.rs  powershell.rs  zsh.rs
src/telemetry/: correlation.rs  events.rs  exporters.rs  metrics.rs  mod.rs  spans.rs
src/testing/: fixtures.rs  mocks.rs  mod.rs  test_utils.rs
src/tests/: agents.rs  cli.rs  codegen.rs  context.rs  interactive.rs  mod.rs  ui.rs
src/tools/: auth.rs  execution.rs  mcp.rs  mod.rs  providers.rs  registry.rs
src/ui/: behavior_editor.rs  blocks.rs  command_palette.rs  coordination_viz.rs  enhanced_panels.rs  error_handler.rs  input.rs  keybindings.rs  mod.rs  notifications.rs  panels.rs  progress.rs  review.rs  shortcuts.rs  syntax.rs  themes.rs
src/vcs/: commit_messages.rs  git.rs  hooks.rs  mod.rs  pull_requests.rs
src/web/: handlers.rs  mod.rs  server.rs  websocket.rs
test-project/: .agentic-config.toml
tests/: agents_integration.rs  agents_tests.rs  codegen_tests.rs  config_unit.rs  context_tests.rs  integration_tests.rs  property_tests.rs  self_replication_test.rs
web/: dashboard.html
