[package]
name = "agentic-dev-env"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An agentic development environment optimized for writing code by prompt on large, existing codebases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/agentic-dev-env"
keywords = ["ai", "agent", "development", "code-generation", "rust"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
requwest = { version = "0.12", features = ["json"] }
notify = "6.0"
crossterm = "0.27"
ratatui = "0.28"
tree-sitter = "0.20"
git2 = "0.18"
walkdir = "2.0"
regex = "1.0"
unix_socket = "0.5"
shell-words = "1.1"
config = "0.14"
toml = "0.8"
indexmap = "2.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
