[package]
name = "devkit"
version = "0.1.0"
edition = "2021"
authors = ["Infer No Dev <contact@infer-no-dev.com>"]
description = "AI-powered development toolkit - just describe what you want, no manual coding needed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infer-no-dev/devkit"
homepage = "https://github.com/infer-no-dev/devkit"
documentation = "https://docs.rs/devkit"
readme = "README.md"
keywords = ["ai", "agent", "development", "code-generation", "cli"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.70.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6.0"
crossterm = "0.27"
ratatui = "0.28"
tree-sitter = "0.20"
git2 = "0.18"
walkdir = "2.0"
regex = "1.0"
unix_socket = "0.5"
shell-words = "1.1"
config = "0.14"
toml = "0.8"
indexmap = "2.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
indicatif = "0.17"
# atty = "0.2"  # Removed due to security vulnerability RUSTSEC-2021-0145
is-terminal = "0.4"  # Modern replacement for atty
colored = "2.0"
once_cell = "1.0"
rand = { version = "0.8", features = ["std_rng"] }
gethostname = "0.4"
tempfile = "3.0"
sysinfo = "0.29"

# Main binary
[[bin]]
name = "devkit"
path = "src/main.rs"

[[example]]
name = "test_agents"
path = "test_agents.rs"

[[example]]
name = "test_shell"
path = "test_shell.rs"

[[example]]
name = "test_integration"
path = "test_integration_fixed.rs"

[[example]]
name = "test_system_bus"
path = "test_system_bus.rs"

[dev-dependencies]
env_logger = "0.11"
tracing-test = "0.2"
num_cpus = "1.0"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
cargo-deny = "0.14"
pretty_assertions = "1.0"
insta = "1.0"  # For snapshot testing
proptest = "1.0"  # For property-based testing
mockall = "0.12"  # For mocking in tests

[[bench]]
name = "main"
harness = false
